--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "GNU GPL v3.0",
     "require": {
         "slim/slim": "^3.5",
-        "slim/twig-view": "^2.1"
+        "slim/twig-view": "^2.1",
+        "willdurand/negotiation": "^2.0"
     },
     "autoload": {
         "psr-4": {
