--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "slim/slim": "^3.5",
         "slim/twig-view": "^2.1",
-        "willdurand/negotiation": "^2.0"
+        "willdurand/negotiation": "^2.0",
+        "respect/validation": "^1.1"
     },
     "autoload": {
         "psr-4": {
