Añade dependencia DOMPDF para generar reportes en PDF.

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "slim/slim": "^3.5",
         "slim/twig-view": "^2.1",
         "willdurand/negotiation": "^2.0",
-        "respect/validation": "^1.1"
+        "respect/validation": "^1.1",
+        "dompdf/dompdf": "^0.8.0"
     },
     "autoload": {
         "psr-4": {
